--- a/.github/redis.conf
+++ b/.github/redis.conf
@@ -112,7 +112,7 @@ tcp-backlog 511
 # incoming connections. There is no default, so Redis will not listen
 # on a unix socket when not specified.
 #
-unixsocket /tmp/docker/redis.sock
+unixsocket /run/shared/redis.sock
 unixsocketperm 777
 
 # Close the connection after a client is idle for N seconds (0 to disable)
