--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -53,7 +53,8 @@ jobs:
       - name: Prepare2
         run: |
           echo "::group::Env prepare"
-          docker-compose -f ./.github/docker-compose.yml up -d ${ENV_SERVICE}
+          docker network create imi-ci-service-network --subnet 172.10.12.0/24
+          docker compose -f ./.github/docker-compose.yml up -d ${ENV_SERVICE}
           echo "::endgroup::"
           echo "::group::Env info"
           docker exec ${ENV_SERVICE} php -v
