--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -371,6 +371,12 @@ jobs:
       - name: Test
         if: ${{ env.test_prepared && always() }}
         run: composer test
+      - name: Test connection-center
+        if: ${{ env.test_prepared && always() }}
+        run: composer test-connection-center
+      - name: Test database
+        if: ${{ env.test_prepared && always() }}
+        run: composer test-database
       - name: Test redis
         if: ${{ env.test_prepared && always() }}
         env:
@@ -384,48 +390,42 @@ jobs:
       - name: Test swoole
         if: ${{ env.test_prepared && always() }}
         run: composer test-swoole
-      # - name: Test workerman
-      #   if: ${{ env.test_prepared && always() }}
-      #   run: composer test-workerman
-      # - name: Test workerman-gateway
-      #   if: ${{ env.test_prepared && always() }}
-      #   run: composer test-workerman-gateway
-      # - name: Test roadrunner
-      #   if: ${{ env.test_prepared && always() }}
-      #   run: composer test-roadrunner
-      # - name: Test fpm
-      #   if: ${{ env.test_prepared && always() }}
-      #   run: composer test-fpm
-      # - name: Test jwt
-      #   if: ${{ env.test_prepared && always() }}
-      #   run: composer test-jwt
-      # - name: Test queue
-      #   if: ${{ env.test_prepared && always() }}
-      #   run: composer test-queue
-      # - name: Test grpc
-      #   if: ${{ env.test_prepared && always() }}
-      #   run: composer test-grpc
-      # - name: Test snowflake
-      #   if: ${{ env.test_prepared && always() }}
-      #   run: composer test-snowflake
-      # - name: Test mqtt
-      #   if: ${{ env.test_prepared && always() }}
-      #   run: composer test-mqtt
-      # - name: Test smarty
-      #   if: ${{ env.test_prepared && always() }}
-      #   run: composer test-smarty
-      # - name: Test phar
-      #   if: ${{ env.test_prepared && always() }}
-      #   run: composer test-phar
-      # - name: Test connection-center
-      #   if: ${{ env.test_prepared && always() }}
-      #   run: composer test-connection-center
-      # - name: Test database
-      #   if: ${{ env.test_prepared && always() }}
-      #   run: composer test-database
-      # - name: Test model
-      #   if: ${{ env.test_prepared && always() }}
-      #   run: composer test-model
+      - name: Test workerman
+        if: ${{ env.test_prepared && always() }}
+        run: composer test-workerman
+      - name: Test workerman-gateway
+        if: ${{ env.test_prepared && always() }}
+        run: composer test-workerman-gateway
+      - name: Test roadrunner
+        if: ${{ env.test_prepared && always() }}
+        run: composer test-roadrunner
+      - name: Test fpm
+        if: ${{ env.test_prepared && always() }}
+        run: composer test-fpm
+      - name: Test jwt
+        if: ${{ env.test_prepared && always() }}
+        run: composer test-jwt
+      - name: Test queue
+        if: ${{ env.test_prepared && always() }}
+        run: composer test-queue
+      - name: Test grpc
+        if: ${{ env.test_prepared && always() }}
+        run: composer test-grpc
+      - name: Test snowflake
+        if: ${{ env.test_prepared && always() }}
+        run: composer test-snowflake
+      - name: Test mqtt
+        if: ${{ env.test_prepared && always() }}
+        run: composer test-mqtt
+      - name: Test smarty
+        if: ${{ env.test_prepared && always() }}
+        run: composer test-smarty
+      - name: Test phar
+        if: ${{ env.test_prepared && always() }}
+        run: composer test-phar
+      - name: Test model
+        if: ${{ env.test_prepared && always() }}
+        run: composer test-model
       - name: Print logs
         if: failure()
         run: php .github/print-logs.php
