Update: 实现统一的测试环境检测

--- a/src/Components/redis/composer.json
+++ b/src/Components/redis/composer.json
@@ -23,6 +23,7 @@
             "Imi\\Redis\\Dev\\": "dev/"
         },
         "files": [
+            "./tests/helper.php",
             "../../../vendor/autoload.php",
             "../connection-center/vendor/autoload.php"
         ]
