--- a/.github/workflows/rector.yml
+++ b/.github/workflows/rector.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Prepare2
         run: |
           echo "::group::Env prepare"
-          docker-compose -f ./.github/docker-compose.yml up -d ${ENV_SERVICE}
+          docker compose -f ./.github/docker-compose.yml up -d ${ENV_SERVICE}
           echo "::endgroup::"
           echo "::group::Env info"
           docker exec ${ENV_SERVICE} php -v
