--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -20,11 +20,11 @@ jobs:
       ENV_SERVICE: swoole-only
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Prepare
         run: |
-          docker-compose -f ./.github/docker-compose.yml up -d ${ENV_SERVICE}
+          docker compose -f ./.github/docker-compose.yml up -d ${ENV_SERVICE}
           docker exec ${ENV_SERVICE} php -v
           docker exec ${ENV_SERVICE} composer -V
           docker exec ${ENV_SERVICE} composer update --no-interaction --prefer-dist --no-progress
