--- a/.github/actions/ci-prepare/action.yml
+++ b/.github/actions/ci-prepare/action.yml
@@ -14,7 +14,7 @@ runs:
       run: |
         docker network create imi-ci-service-network --subnet 172.10.12.0/24
         docker compose -f ./.github/service/redis-cluster/docker-compose.yml up -d
-        docker compose -f ./.github/docker-compose.yml up -d ${{ inputs.env }} redis-new
+        docker compose -f ./.github/docker-compose.yml up -d ${{ inputs.env }}
         docker exec ${{ inputs.env }} php -v
         docker exec ${{ inputs.env }} php -m
         docker exec ${{ inputs.env }} php --ri redis
